# intent-translator-agent

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  Dockerfile.ml  Dockerfile.node  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.build.json  tsconfig.json
docs/: DEPLOYMENT-GUIDE.md  DOMAIN-EXPERT-GUIDE.md
src/: config.ts  index.ts
src/agents/: orchestrator.ts
src/agents/context-manager/: index.ts
src/agents/continuous-learning/: index.ts
src/agents/input-normalizer/: index.ts
src/agents/intent-classifier/: index.ts
src/agents/knowledge-updater/: index.ts
src/agents/process-router/: index.ts
src/agents/response-humanizer/: index.ts
src/agents/slot-extractor/: index.ts
src/agents/slot-filler/: index.ts
src/ml/: setup_models.py
src/ml/intent-classifier/: inference.py  train.py
src/ml/knowledge-system/: __init__.py
src/ml/slot-extractor/: date_parser.py  ner_model.py
src/prompts/: intent-fallback.md  nlu-system-prompt.md  response-humanizer.md  slot-extraction.md
src/routing/: intent-registry-government.yaml  intent-registry.yaml  registry-loader.ts
src/routing/api-adapters/: base-adapter.ts  government-portal.ts  university-sis.ts
src/routing/slot-schemas/: government.yaml  university.yaml
src/tools/: llm-client.ts
src/types/: index.ts
src/ui/: telegram-bot.ts
src/ui/admin-dashboard/: index.html
src/voice/: asr-adapter.ts  tts-adapter.ts
(+3 files in other folders)
